--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,23 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Agenda</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <% if(!user) { %>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Agenda</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+
+        <ul class="navbar-nav ml-auto">
+          <% if(!user) { %>
           <li class="nav-item">
             <a class="nav-link" href="/login/index">Entrar</a>
           </li>
-        <% } else { %>
+          <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="/contato/index">Cadastrar Contatos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login/logout">Sair</a>
           </li>
-        <% } %>
-      </ul>
+          <% } %>
+        </ul>
+      </div>
     </div>
   </nav>
